# PolicyCaptureMVP

./: .gitignore  DEPLOYMENT_AND_IMPLEMENTATION_GUIDE.md  DEPLOYMENT_AND_IMPLEMENTATION_GUIDE.tex  README.md  TECHNICAL_BREAKDOWN.md  V1_EXPERIMENTAL_DUMP.md  config.yaml  pyproject.toml  requirements.txt
apps/local_api/: classify_routes.py  main.py  routes.py
apps/review-ui/static/css/: styles.css
apps/review-ui/static/js/: app.js  frame_review.js  ocr_review.js  recorder.js
apps/review-ui/templates/: base.html  docs.html  frame_review.html  index.html  ocr_review.html  recorder.html
classify-ui/: build.mjs  package-lock.json  package.json  style.css
classify-ui/src/: App.jsx
data/: policycapture.db-shm  policycapture.db-wal
extension/: background.js  manifest.json
extension/dashboard/: dashboard.html
extension/popup/: popup.html  popup.js
ml/training/: MLTrainingv1.py  MLTrainingv2.py  MLTrainingv3.py  test.csv  train.csv
scripts/: run.sh  seed_demo.py
tests/: test_pipeline.py
