[project]
name = "policycapture-local"
version = "0.1.0"
description = "Local-first extraction workflow for recorded screen sessions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.25.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "paddleocr>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
